<resources>
    <string name="app_name">Discover China</string>
    <string name="related_photo_not_found">Related photos not found</string>
    <string name="search_for_ideas">Search for ideas</string>
    <string name="saved_pins">Saved Pins</string>
    <string name="cities">Cities</string>
    <string name="cuisine">Cuisine</string>
    <string name="festivals">Festivals</string>
    <string name="kungfu">Kungfu</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="followers">Followers</string>
    <string name="no_saved_pins">No Saved Pins</string>
    <string name="more_like_this">More Like This</string>
</resources>