<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_weight="1"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="2dp"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/tv_cities"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:background="@drawable/border_round_all_dark"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:text="@string/cities" />

                    <TextView
                        android:id="@+id/tv_cuisine"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@drawable/border_round_all_dark"
                        android:padding="8dp"
                        android:gravity="center"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:textColor="@color/white"
                        android:text="@string/cuisine" />

                    <TextView
                        android:id="@+id/tv_festivals"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:background="@drawable/border_round_all_dark"
                        android:padding="8dp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:text="@string/festivals" />

                    <TextView
                        android:id="@+id/tv_kungfu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:background="@drawable/border_round_all_dark"
                        android:padding="8dp"
                        android:gravity="center"
                        android:layout_marginStart="2dp"
                        android:layout_marginEnd="2dp"
                        android:textColor="@color/white"
                        android:text="@string/kungfu" />

                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:id="@+id/recyclerPins"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>