<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/iv_photo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:src="@drawable/im_post_4"
                            app:shapeAppearanceOverlay="@style/top_rounded" />

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_bottom_rounded"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/iv_profile"
                                android:layout_width="45dp"
                                android:layout_height="45dp"
                                android:scaleType="centerCrop"
                                android:src="@color/purple_500"
                                app:shapeAppearanceOverlay="@style/circle" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:paddingHorizontal="10dp">

                                <TextView
                                    android:id="@+id/tv_fullName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/tv_followers"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/black"
                                    android:textSize="16sp" />

                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:gravity="end|center_vertical">

                                <RatingBar
                                    android:id="@+id/ratingBar"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:numStars="5"
                                    android:progressTint="@color/black"
                                    android:isIndicator="false"
                                    style="@style/Widget.AppCompat.RatingBar.Small"/>
                            </LinearLayout>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:gravity="center"
                            android:text="@string/description"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingHorizontal="15dp"
                            android:paddingVertical="10dp"
                            android:text="@string/appbar_scrolling_view_behavior"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingVertical="10dp">

                            <FrameLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.6"
                                android:paddingEnd="5dp">

                                <ImageView
                                    android:id="@+id/iv_btn_like"
                                    android:layout_width="25dp"
                                    android:layout_height="25dp"
                                    android:layout_gravity="center_vertical"
                                    android:src="@drawable/like" />

                            </FrameLayout>

                            <FrameLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:paddingStart="5dp">

                                <TextView
                                    android:id="@+id/tv_btn_save"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/border_round_message"
                                    android:backgroundTint="#F4000D"
                                    android:padding="20dp"
                                    android:text="@string/save"
                                    android:textColor="@color/white"
                                    android:textSize="16sp"
                                    android:textStyle="bold" />

                            </FrameLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="3dp"
                    android:padding="10dp"
                    android:background="@drawable/shape_rounded"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_related"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/more_like_this"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <ImageView
            android:id="@+id/iv_btn_back"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="top|start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_back"
            app:tint="@color/white" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>